# FinanceVault

./: .env.example  .gitignore  .releaserc.json  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  README.md  RELEASE_WORKFLOW.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  test-docker.sh
.github/: CICD.md  WORKFLOW_VISUALIZATION.md
.github/scripts/: test-update-versions.sh  update-versions.sh
.github/workflows/: README.md  docker-build-push.yml  main-release.yml  release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.yml
backend/entity/: Cargo.toml
backend/entity/src/entities/: config.rs  expenses.rs  mod.rs  subscription.rs  user.rs
backend/migration/src/: lib.rs  m20251026_150828_user.rs  m20251026_151103_config.rs  m20251030_192944_expenses.rs  m20251101_200000_subscriptions.rs
backend/src/: auth_service.rs  db.rs  main.rs
backend/src/auth/: crypto.rs  jwt.rs  middleware.rs  mod.rs
backend/src/routes/: expenses.rs  frontend.rs  mod.rs  subscriptions.rs  users.rs
backend/src/utils/: mod.rs  router_ext.rs
frontend/: Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: login-form-client.svelte  login-form.svelte  signup-form-client.svelte  signup-form.svelte
frontend/src/lib/components/budget/: budget-overview-card.svelte  budget-radial-chart.svelte  budget-set-card.svelte
frontend/src/lib/components/expenses/: badge-cell.svelte  data-table-actions.svelte  expenses-with-filters.svelte  expenses.svelte  overview.svelte  subscritpions.svelte
frontend/src/lib/components/invoice/: invoices-column.svelte  manual-entries-column.svelte  match-overview.svelte
frontend/src/lib/components/navbar/: app-sidebar.svelte  nav-main.svelte  nav-user.svelte  team-switcher.svelte
frontend/src/lib/components/ui/: service-icon.svelte
frontend/src/lib/components/vault/: vault-gate.svelte
frontend/src/lib/services/: api-client.ts  auth.ts  budget.ts  expenses.ts  invoice.ts  savings.ts  subscriptions.ts  yahoo.ts
frontend/src/lib/stores/: auth.ts  theme.ts  vault.ts
frontend/src/lib/types/: index.ts
frontend/src/lib/utils/: logger.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/api/set-auth-cookie/: +server.ts
frontend/src/routes/budget/: +page.svelte
frontend/src/routes/budgets/: +page.svelte
frontend/src/routes/expenses/monthly/: +page.server.ts  +page.svelte
frontend/src/routes/expenses/overview/: +page.server.ts  +page.svelte
frontend/src/routes/invoices/: +page.svelte
frontend/src/routes/portfolio/: +page.svelte
frontend/src/routes/signin/: +page.server.ts  +page.svelte
frontend/src/routes/signup/: +page.server.ts  +page.svelte
frontend/src/routes/subscriptions/: +page.server.ts  +page.svelte
scripts/: start_single_container.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  budget.rs  dashboard.rs  expenses.rs  mod.rs  portfolio.rs  savings.rs  subscriptions.rs  totp.rs  yahoo.rs
(+3 files in other folders)
