[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
dotenvy = "0.15"
migration = { path = "migration" }
entity = { path = "entity" }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0.145"
jsonwebtoken = "9.3.0"
bcrypt = "0.15"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
async-trait = "0.1"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
